Fix #10, broken on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -46,9 +46,13 @@ canvas {
 }
 
 .canvaswrap {
-  height: 500px;
   position: relative;
   visibility: hidden;
+}
+
+canvas,
+.canvaswrap {
+  height: 500px;
   width: 500px;
 }
 
